template.yaml
# Definicja wszystkich obiekrów w środowisku

AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: SAM Template for Astro project deployment with S3 and CloudFront (No custom domain)

Parameters:
  ProjectName:
    Type: String
    Default: dev
    Description: The environment to deploy to (e.g., dev, prod)
  ClusterName:
    Type: String
    Description: The name of the ECS cluster
  VpcId:
    Type: String
    Description: The ID of the VPC where the ECS cluster will be created
  SubnetIds:
    Type: CommaDelimitedList
    Description: The IDs of the subnets where the ECS cluster will be created
  DatabaseUsername:
    Type: String
    Default: dbadmin
    Description: Username for the database
 

Resources:
  BackendRepository: 
    Type: AWS::ECR::Repository


  BackendTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      RequiresCompatibilities:
          - FARGATE
      NetworkMode: awsvpc
      ContainerDefinitions:
        - Name: ApkaMatiego
          Image: !GetAtt BackendRepository.RepositoryUri
          PortMappings:
            - ContainerPort: 8080
              HostPort: 8080
              Protocol: tcp
          Essential: true



  BackendECSService:
    Type: AWS::ECS::Service
    DependsOn: LoadBalancerListener
    Properties:
      LoadBalancers:
          - ContainerName: ApkaMatiego
            ContainerPort: 8080
            TargetGroupArn: !Ref ALBTargetGroup
      ServiceName: cfn-service
      Cluster: !Ref ClusterName
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - sg-034be41c41305fa7c
          Subnets:
            - subnet-01fca484b79d487c1
            - subnet-0e2c93a24cb1a9963
      TaskDefinition: !Ref BackendTaskDefinition

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'


  # Application Load Balancer Resources
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        !Ref SubnetIds
      Type: application
      IpAddressType: ipv4

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VpcId
      HealthCheckPath: /api/hello
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

    
    # Database Resources
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for Aurora PostgreSQL
      SubnetIds: !Ref SubnetIds

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Aurora PostgreSQL
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ServiceSecurityGroupId

  # Generate random password for database
  GeneratedDatabasePassword:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub "${ProjectName}-db-password"
      Description: "Auto-generated password for database"
      GenerateSecretString:
        SecretStringTemplate: '{"username": "{{resolve:ref:DatabaseUsername}}"}'
        GenerateStringKey: "password"
        PasswordLength: 16
        ExcludeCharacters: '"@/\'

  AuroraCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-postgresql
      EngineVersion: 14.5
      DatabaseName: !Sub "${ProjectName}db"
      MasterUsername: !Ref DatabaseUsername
      MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref GeneratedDatabasePassword, ':SecretString:password}}' ]]
      DBSubnetGroupName: !Ref DBSubnetGroup
      VpcSecurityGroupIds:
        - !Ref DBSecurityGroup
      BackupRetentionPeriod: 7
      StorageEncrypted: true
      DeletionProtection: false

  AuroraInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier: !Ref AuroraCluster
      DBInstanceClass: db.t4g.micro
      Engine: aurora-postgresql
      PubliclyAccessible: false

  DatabaseSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub "${ProjectName}-db-credentials"
      Description: "Database credentials"
      SecretString: !Sub 
        - '{"username":"${DatabaseUsername}","password":"${Password}","engine":"postgres","host":"${AuroraCluster.Endpoint.Address}","port":"${AuroraCluster.Endpoint.Port}","dbname":"${ProjectName}db"}'
        - Password: !Join ['', ['{{resolve:secretsmanager:', !Ref GeneratedDatabasePassword, ':SecretString:password}}' ]]
 


Outputs:
  DatabaseEndpoint:
    Description: Endpoint of the Aurora PostgreSQL cluster
    Value: !GetAtt AuroraCluster.Endpoint.Address
    Export:
      Name: !Sub "${ProjectName}-DatabaseEndpoint"

  DatabasePort:
    Description: Port of the Aurora PostgreSQL cluster
    Value: !GetAtt AuroraCluster.Endpoint.Port
    Export:
      Name: !Sub "${ProjectName}-DatabasePort"

  DatabaseName:
    Description: Name of the database
    Value: !Sub "${ProjectName}db"
    Export:
      Name: !Sub "${ProjectName}-DatabaseName"

  DatabaseSecretArn:
    Description: ARN of the secret containing database credentials
    Value: !Ref DatabaseSecret
    Export:
      Name: !Sub "${ProjectName}-DatabaseSecretArn"
